--- a/src/service_A.html
+++ b/src/service_A.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('background2.jpg');
+  background-image: url('background_service_A.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
